add create unit

--- a/eim/templates/eim/sidebar.html
+++ b/eim/templates/eim/sidebar.html
@@ -10,10 +10,10 @@
                 <i class="fa fa-times"></i>
             </span>
         </span>
-    <a href="{% url 'receive_kcs' %}" class="list-group-item">
-        <i class="fa fa-truck"></i> Receive KCS<span class="badge">Unknown Qty</span>
+    <a href="{% url 'oldkcs_receive' %}" class="list-group-item">
+        <i class="fa fa-truck"></i> Receive KCS<span class="badge">Qty</span>
     </a>
-    <a href="#" class="list-group-item">
+    <a href="{% url 'unit_list' %}" class="list-group-item">
         <i class="fa fa-wpexplorer"></i> RMA Process
     </a>
     <a href="#" class="list-group-item">
