--- a/eim/templates/eim/oldkcs.html
+++ b/eim/templates/eim/oldkcs.html
@@ -3,6 +3,13 @@
 {% block detail %}
 
     <h2>Page PATH /eim/receive</h2>
+    {% if messages %}
+
+        {% for message in messages %}
+            <p  {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</p>
+        {% endfor %}
+
+    {% endif %}
     <div class="row">
         <form method='GET' action=''>
             <div class="form-inline">
@@ -14,11 +21,15 @@
                 <div class="form-group">
                     <input type='submit' class="btn btn-info" value='Search'/>
                 </div>
+                <div class="form-group">
+                    <a href="{% url 'OldKcs_create' %}" class="btn btn-success" type="submit">Add new shipment</a>
+                </div>
+
             </div>
         </form>
-        <a href="{% url 'OldKcs_create' %}" class="btn btn-success" type="submit">Add new shipment</a>
+
     </div>
-    <hr />
+    <hr/>
 
     <div>
         {% if OldKcsList %}
@@ -32,22 +43,22 @@
         {% endif %}
     </div>
     {# TODO: Add pagination here #}
-{#    <div class="pagination">#}
-{#    <span class="step-links">#}
-{#        {% if object_list.has_previous %}#}
-{#            <a href="?{{ page_request_var }}=#}
-{#                    {{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>#}
-{#        {% endif %}#}
-{##}
-{#        <span class="current">#}
-{#            Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.#}
-{#        </span>#}
-{##}
-{#        {% if object_list.has_next %}#}
-{#            <a href="?{{ page_request_var }}=#}
-{#                    {{ object_list.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">next</a>#}
-{#        {% endif %}#}
-{#    </span>#}
-{#    </div>#}
+    {#    <div class="pagination">#}
+    {#    <span class="step-links">#}
+    {#        {% if object_list.has_previous %}#}
+    {#            <a href="?{{ page_request_var }}=#}
+    {#                    {{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>#}
+    {#        {% endif %}#}
+    {##}
+    {#        <span class="current">#}
+    {#            Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.#}
+    {#        </span>#}
+    {##}
+    {#        {% if object_list.has_next %}#}
+    {#            <a href="?{{ page_request_var }}=#}
+    {#                    {{ object_list.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">next</a>#}
+    {#        {% endif %}#}
+    {#    </span>#}
+    {#    </div>#}
 
 {% endblock %}
