basic frame finish

--- a/eim/templates/eim/sidebar.html
+++ b/eim/templates/eim/sidebar.html
@@ -16,7 +16,7 @@
     <a href="{% url 'unit_list' %}" class="list-group-item">
         <i class="fa fa-wpexplorer"></i> RMA Process
     </a>
-    <a href="#" class="list-group-item">
+    <a href="{% url 'operation_list' %}" class="list-group-item">
         <i class="fa fa-link"></i> Operation
     </a>
     <a href="#" class="list-group-item">
