--- a/eim/templates/eim/sidebar.html
+++ b/eim/templates/eim/sidebar.html
@@ -19,6 +19,9 @@
     <a href="{% url 'operation_list' %}" class="list-group-item">
         <i class="fa fa-link"></i> Operation
     </a>
+    <a href="{% url 'show_inventory' %}" class="list-group-item">
+        <i class="fa fa-cube"></i> Inventory <span class="badge">14</span>
+    </a>
     <a href="#" class="list-group-item">
         <i class="fa fa-wheelchair"></i> Information <span class="badge">14</span>
     </a>
