basic frame finish

--- a/eim/templates/eim/home.html
+++ b/eim/templates/eim/home.html
@@ -3,10 +3,7 @@
 
 {% block detail %}
 
-
-
-    This is old kcs receiving page
-    <h2>Page PATH /eim/home</h2>
+    <h2>EIM HOMEPAGE</h2>
 
 
 {% endblock %}
