--- a/eim/templates/eim/oldkcs.html
+++ b/eim/templates/eim/oldkcs.html
@@ -2,7 +2,7 @@
 
 {% block detail %}
 
-    <h2>Page PATH /eim/receive</h2>
+    <h2 class="hidden">Page PATH /eim/receive</h2>
     {% if messages %}
 
         {% for message in messages %}
