--- a/eim/templates/eim/oldkcs_create.html
+++ b/eim/templates/eim/oldkcs_create.html
@@ -2,7 +2,7 @@
 
 {% block detail %}
 
-    <h2>Page PATH /eim/oldkcs_create</h2>
+    <h2 class="hidden">Page PATH /eim/oldkcs_create</h2>
 
     <div class="col-md-6 col-sm-12 col-lg-6">
     <form action="{% url 'OldKcs_create' %}" method="POST" enctype='multipart/form-data'>
