--- a/eim/templates/eim/operation_create.html
+++ b/eim/templates/eim/operation_create.html
@@ -2,7 +2,7 @@
 
 {% block detail %}
 
-    <h2>Page PATH /eim/operation_create.html</h2>
+    <h2 class="hidden">Page PATH /eim/operation_create.html</h2>
     {% if messages %} {% for message in messages %}
         <p  {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</p>
     {% endfor %}{% endif %}
