--- a/eim/templates/eim/oldkcs_create.html
+++ b/eim/templates/eim/oldkcs_create.html
@@ -28,7 +28,7 @@
                 <input type="submit" class="btn btn-default" value="Receive"/>
             </form>
         {% else %}
-            <p>you must login</p>
+            <p>You must login to receive new shipment</p>
         {% endif %}
 
     </div>
