--- a/templates/nav.html
+++ b/templates/nav.html
@@ -28,10 +28,10 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">
+                <li><a href="{% url 'login' %}">
                     <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
                     Sign in</a></li>
-                <li><a href="#">
+                <li><a href="{% url 'signup' %}">
                     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                     Sign up</a></li>
             </ul>
