--- a/eim/templates/eim/operation_create.html
+++ b/eim/templates/eim/operation_create.html
@@ -8,30 +8,35 @@
     {% endfor %}{% endif %}
     <div class="row">
         <div class="col-md-8 col-xs-12 col-lg-6">
-            <form action="" method="POST" name="operation_form" onsubmit="return validateForm()">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="id_target">Target:</label>
-                    <input class="form-control" name="target" id="id_target" required="" type="text"
-                           maxlength="50"></div>
-                <div class="form-group">
-                    <label for="id_action_type">Action type:</label>
-                    <input class="form-control" name="action_type" id="id_action_type" required="" type="text"
-                           maxlength="50"></div>
-                <div class="form-group">
-                    <label for="id_content">Content:</label>
-                    <input class="form-control" name="content" id="id_content" required="" type="text" maxlength="2000">
-                </div>
+            {% if request.user.is_authenticated %}
+                <form action="" method="POST" name="operation_form" onsubmit="return validateForm()">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="id_target">Target:</label>
+                        <input class="form-control" name="target" id="id_target" required="" type="text"
+                               maxlength="50"></div>
+                    <div class="form-group">
+                        <label for="id_action_type">Action type:</label>
+                        <input class="form-control" name="action_type" id="id_action_type" required="" type="text"
+                               maxlength="50"></div>
+                    <div class="form-group">
+                        <label for="id_content">Content:</label>
+                        <input class="form-control" name="content" id="id_content" required="" type="text"
+                               maxlength="2000">
+                    </div>
 
-                <button class="btn btn-default" type="submit">Submit</button>
+                    <button class="btn btn-default" type="submit">Submit</button>
 
 
-            </form>
+                </form>
+            {% else %}
+                <p>You must login to perform operation</p>
+            {% endif %}
         </div>
         <div class="col-md-4 col-xs-12 col-lg-4">
+            <h6>All available KCS and Units</h6>
             <p>{% for each in active_list %}
                 {{ each }}/
-
             {% endfor %}</p>
         </div>
     </div>
